Update x-pack/plugin/security/src/main/java/org/elasticsearch/xpack/security/action/privilege/TransportClearPrivilegesCacheAction.java
Co-Authored-By: Tim Vernum <tim@adjective.org>